# mixxx-mcp

./: README.md  main.py  mixxx-mcp.js  mixxx-mcp.midi.xml  pyproject.toml
src/: __init__.py  controls.py  midi_bridge.py  osc_listener.py  queue_manager.py  server.py
