[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mixxx-mcp"
version = "1.0.0"
description = "MCP server for Mixxx DJ Software — control decks, mixer, effects via AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.3.0",
    "python-osc>=1.8.3",
    "python-rtmidi>=1.5.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
mixxx-mcp = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
